# MobileSlicer

./: .gitignore  README.md  SECURITY.md  SOURCE_NOTICE.md  THIRD_PARTY_NOTICES.md
.github/workflows/: android-checks.yml  android-release-dry-run.yml
README/: README.md  RELEASE_PERFORMANCE_HARDENING.md  VERIFICATION.md  WORKSPACE_AUTO_ORIENT_ARRANGE.md
README/plans/: MODEL_SEARCH_IMPORT_PLAN.md
Website/: 404.html  README.md  _headers  _redirects  about.html  beta.html  faq.html  index.html  legal.html  privacy.html  robots.txt  script.js  sitemap.xml  styles.css  support.html  wrangler.toml
Website/lib/: thingiverse-oauth.mjs
Website/licenses/: agpl-3.0.html
Website/test/: thingiverse-oauth.test.mjs
android-app/app/: build.gradle.kts  proguard-rules.pro
android-app/app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp  scanner_apriltag_stub.cpp  scanner_pose_optimizer_stub.cpp  scanner_pose_solver_stub.cpp
android-app/gradle/: libs.versions.toml
cmake/libnoise/: libnoiseConfig.cmake
docs/: ORCA_CANVAS3D_THUMBNAIL_PORT_PLAN.md  ORCA_GOLDEN_FIXTURES.md  ORCA_METADATA_THUMBNAIL_PARITY_PLAN.md  ORCA_PARITY_AUDIT_NEXT_STEPS.md  ORCA_PARITY_RESUME_HANDOFF.md  ORCA_PROCESS_SETTING_COVERAGE.md  ORCA_PROFILE_PARITY.md  ORCA_STABILIZATION_PLAN.md  ORCA_THUMBNAIL_NEXT_STEPS_RESEARCH.md  ORCA_THUMBNAIL_RENDERER_FEASIBILITY.md  PRINTER_THUMBNAIL_COMPATIBILITY.md  STEP_IMPORT.md
docs/modelsearch/: IMPLEMENTATION.md  THINGIVERSE_DIRECT_IMPORT_PLAN.md
docs/releases/: 0.1.1-beta.md  0.1.2-beta.md  0.1.4-beta-manifest.json  0.1.4-beta.md  BAMBU_LAN_RELEASE_SMOKE.md
docs/scanner/: README.md
engine-wrapper/: CMakeLists.txt  orca_android_paint_object_bounds_probe.cpp  orca_android_v2_paint_replay_probe.cpp  orca_native_paint.cpp  orca_native_paint.h  orca_thumbnail_render_contract_probe.cpp  orca_wrapper.cpp  orca_wrapper.h  orca_wrapper_android.cpp  orca_wrapper_applied_key_manifest.h  orca_wrapper_calibration.cpp  orca_wrapper_config_adhesion_helpers.h  orca_wrapper_config_gcode_io_helpers.h  orca_wrapper_config_helpers.h  orca_wrapper_config_json_overrides.h  orca_wrapper_config_scalar_helpers.h  orca_wrapper_gcode.cpp  orca_wrapper_gcode.h  orca_wrapper_gcode_summary.inc  orca_wrapper_internal.cpp  orca_wrapper_internal.h  orca_wrapper_model_overrides.cpp  orca_wrapper_module_common.h  orca_wrapper_module_context.h  orca_wrapper_paint_binding_helpers.h  orca_wrapper_paint_cut_api.cpp  orca_wrapper_paint_replay_types.h  orca_wrapper_planning_api.cpp  orca_wrapper_planning_helpers.h  orca_wrapper_preview_api.cpp  orca_wrapper_preview_helpers.h  orca_wrapper_preview_input.inc  orca_wrapper_runtime.cpp  orca_wrapper_slice_export_api.cpp  orca_wrapper_utils.cpp  orca_wrapper_wipe_tower_helpers.h
engine-wrapper/orca-android-core/: CMakeLists.txt
engine-wrapper/orca-android-libslic3r/: CMakeLists.txt  android_libslic3r_model_stubs.cpp  android_libslic3r_remaining_print_stubs.cpp  android_libslic3r_stubs.cpp  build-android-deps.sh  orca_android_libslic3r_cut_probe.cpp  orca_android_libslic3r_print_gcode_probe.cpp  orca_android_libslic3r_triangle_selector_probe.cpp  stub_inventory.json
engine-wrapper/orca-android-libslic3r/shims/: orca_android_libslic3r_model_preinclude.hpp
engine-wrapper/orca-android-libslic3r/shims/libslic3r/Format/: STEP.hpp
engine-wrapper/orca-android-libslic3r/testdata/: cube_20mm_ascii.stl  paint_support_overhang_ascii.stl  paint_support_probe_config.json
patches/orcaslicer/: 20260507-android-release-vendor-delta.patch  README.md  VENDOR_PATCHES.md
performance-baselines/: perf-heavy-device-baseline.json
regression-fixtures/orca-metadata/: README.md  manifest.json  mobile-baseline-config.json
regression-fixtures/orca-metadata/mobile/: simple-cube.gcode.3mf
regression-fixtures/orca-metadata/references/: README.generated.md  orca-version.txt  simple-cube.gcode.3mf
regression-fixtures/orca-project-references/height-range-project/: README.md  assemble-list.json  audit.json  height-range-project.3mf
regression-fixtures/orca-project-references/modifier-object-settings/: README.md  audit.json  (+2 more)
regression-fixtures/orca-thumbnail-references/: README.md  matrix.json
regression-fixtures/printer-thumbnail-compatibility/: matrix.json
regression-fixtures/slicing/: mobileslicer_test_cube.stl  orca_active_multifilament_probe_cube.stl  stage2_bridge_speed_fixture.stl  stage2_gap_infill_narrow_strip_fixture.stl  stage2_gap_infill_strip_fixture.stl  stage2_inner_wall_acceleration_tall_box_fixture.stl  stage2_small_perimeter_array_fixture.stl  stage2_small_perimeter_fixture.stl  stage3_arranged_objects_fixture.stl
scripts/: analyze_mobile_performance.py  analyze_preview_responsiveness.py  audit_process_profile_coverage.py  bambu_lan_release_smoke.sh  compare_orca_snapmaker_u1_multinozzle_gcode.py  extract_orca_thumbnail_references.py  generate_orca_calibration_stls.py  generate_orca_filament_assets.py  generate_orca_height_range_project_fixture.sh  generate_orca_modifier_project_fixture.sh  generate_orca_printer_assets.py  generate_orca_reference_fixtures.sh  generate_orca_rich_project_fixture.sh  generate_orca_thumbnail_reference_fixture.sh  generate_orca_thumbnail_reference_matrix.sh  orca_3mf_project_preservation_audit.py  orca_gcode_metadata_parity_audit.py  orca_metadata_audit.py  orca_metadata_fixture_gate.py  orca_thumbnail_extraction_probe_gate.py  orca_thumbnail_port_audit.py  orca_thumbnail_reference_fixture_audit.py  orca_thumbnail_visual_diff.py  printer_thumbnail_compatibility_audit.py  probe_orca_active_multifilament_reference.sh  probe_orca_step_project_reference.sh  release_gate_android.sh  release_worktree_audit.py  run_orca_thumbnail_reference_matrix.sh  run_paint_full_app_path_proof.sh  run_paint_full_app_path_validation.sh  run_paint_object_bounds_probe.sh  scanner_app_synthetic_smoke.sh  scanner_device_smoke.sh  scanner_pull_latest_audit.sh  scanner_real_replay.sh  scanner_synthetic_regression.sh  test_analyze_mobile_performance.py  test_analyze_preview_responsiveness.py  test_extract_orca_thumbnail_references.py  (+22 more)
(+421 files in other folders)
